c/examples/writing-a-c-compiler-tests/tests/chapter_7/invalid_semantics/extra_credit/duplicate_labels_different_scopes.c
/* Label names must be unique within a function, even if they're in different scopes */

int main(void) {
    int x = 0;
    if (x) {
        x = 5;
        goto l;
        return 0;
        l:
            return x;
    } else {
        goto l;
        return 0;
        l:
            return x;
    }
}